--- a/index.html
+++ b/index.html
@@ -115,9 +115,24 @@
     </nav>
     <header class="header" id="header">
       <div class="container">
-        
+        <p class="header__title">lightcraft</p>
+        <p class="header__subtitle">Ми спеціалізуємось на комплексних поставках рішень у сфері електротехнічного та світлотехнічного забезпечення об'єктів будівництва.</p>
       </div>
     </header>
+    <div class="about-us">
+      <div class="container">
+        <p class="about-us__title">Ласкаво просимо до <span>lightcraft</span></p>
+        <p class="about-us__subtitle">Наші переваги:</p>
+        <ul class="about-us__list">
+          <li class="about-us__item">розробка концепції електропостачання та освітлення</li>
+          <li class="about-us__item">світлотехнічне проектування і розрахунок освітленості</li>
+          <li class="about-us__item">підбор оптимального обладнання</li>
+          <li class="about-us__item">своєчасна поставка обладнання</li>
+          <li class="about-us__item">контроль правильності проведення інсталяції обладнання</li>
+          <li class="about-us__item">гарантійне та післягарантійне обслуговування обладнання</li>
+        </ul>
+      </div>
+    </div>
     <main class="main">
       <div class="bulb item-block">
         <div class="container">
@@ -154,8 +169,6 @@
                 <p class="tile__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit...</p>
               </div>
             </div>
-          </div>
-          <div class="item-block__row">
             <div class="item-block__tile tile">
               <div class="tile__product">
                 <a href="#" class="tile__img"><img src="#" alt="#"></a>
@@ -225,8 +238,6 @@
                 <p class="tile__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit...</p>
               </div>
             </div>
-          </div>
-          <div class="item-block__row">
             <div class="item-block__tile tile">
               <div class="tile__product">
                 <a href="#" class="tile__img"><img src="#" alt="#"></a>
@@ -296,8 +307,6 @@
                 <p class="tile__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit...</p>
               </div>
             </div>
-          </div>
-          <div class="item-block__row">
             <div class="item-block__tile tile">
               <div class="tile__product">
                 <a href="#" class="tile__img"><img src="#" alt="#"></a>
@@ -367,8 +376,6 @@
                 <p class="tile__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit...</p>
               </div>
             </div>
-          </div>
-          <div class="item-block__row">
             <div class="item-block__tile tile">
               <div class="tile__product">
                 <a href="#" class="tile__img"><img src="#" alt="#"></a>
@@ -438,8 +445,6 @@
                 <p class="tile__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit...</p>
               </div>
             </div>
-          </div>
-          <div class="item-block__row">
             <div class="item-block__tile tile">
               <div class="tile__product">
                 <a href="#" class="tile__img"><img src="#" alt="#"></a>
@@ -509,8 +514,6 @@
                 <p class="tile__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit...</p>
               </div>
             </div>
-          </div>
-          <div class="item-block__row">
             <div class="item-block__tile tile">
               <div class="tile__product">
                 <a href="#" class="tile__img"><img src="#" alt="#"></a>
@@ -548,7 +551,21 @@
     </main>
     <footer class="footer" id="footer">
       <div class="container">
-        
+        <div class="footer__col">
+          <a href="#" class="footer__logo-link">
+            <img src="assets/img/footer-logo.png" alt="LightCraft">
+          </a>
+          <p class="footer__logo-subtitle">Компанія «Лайт Крафт» спеціалізується на комплексних поставках рішень у сфері електротехнічного та світлотехнічного забезпечення об'єктів будівництва.</p>
+        </div>
+        <div class="footer__col">
+          <p class="footer__title">Акції</p>
+        </div>
+        <div class="footer__col">
+          <p class="footer__title">Швидкий перехід</p>
+        </div>
+        <div class="footer__col">
+          <p class="footer__title">Контакти</p>
+        </div>
       </div>
     </footer>
   </div>
