--- a/about-us.html
+++ b/about-us.html
@@ -15,7 +15,7 @@
   <div class="wrapper">
     <header class="header" id="header">
       <div class="container">
-        <a href="#" class="header__logo">
+        <a href="/" class="header__logo">
           <img src="assets/img/logo.png" alt="LightCraft">
         </a>
         <p class="header__address">вул. Віскозна, 17<br>корпус 93-А<br>м. Київ, Україна</p>
