--- a/our-staff.html
+++ b/our-staff.html
@@ -18,7 +18,7 @@
   <div class="wrapper">
     <header class="header" id="header">
       <div class="container">
-        <a href="#" class="header__logo">
+        <a href="/lightcraft" class="header__logo">
           <img src="assets/img/logo.png" alt="LightCraft">
         </a>
         <p class="header__address">вул. Віскозна, 17<br>корпус 93-А<br>м. Київ, Україна</p>
@@ -258,7 +258,7 @@
         <div class="footer__col">
           <p class="footer__title">Компанія</p>
           <ul class="footer__items">
-            <li class="footer__link"><a href="#">Про компанію</a></li>
+            <li class="footer__link"><a href="about-us.html">Про компанію</a></li>
             <li class="footer__link"><a href="#">Оплата і доставка</a></li>
             <li class="footer__link"><a href="#">Сервіс</a></li>
             <li class="footer__link"><a href="#">Статті</a></li>
